--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 
             <div class="content">
                 <nav class="sidebar">
-
                     <ul class="side-nav">
                         <li class="side-nav__item side-nav__item--active">
                             <a href="#" class="side-nav__link">
@@ -85,8 +84,54 @@
                         &copy; 2018 Trillo, No Rights Reserved.
                     </div>
                 </nav>
-                <main class="hotel-view">
 
+                <main class="hotel-view">
+                    <div class="gallery">
+                        <figure class="gallery__item">
+                            <img src="img/hotel-1.jpg" alt="Hotel1" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="img/hotel-2.jpg" alt="Hotel2" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="img/hotel-3.jpg" alt="Hotel3" class="gallery__photo">
+                        </figure>
+                    </div>
+
+                    <div class="overview">
+                        <h1 class="overview__heading">
+                            Hotel Palma Da
+                        </h1>
+                        <div class="overview__stars">
+                            <svg class="overview__icon">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                        </div>
+
+                        <div class="overview__location">
+                            <svg class="overview__icon overview__icon-location">
+                                <use xlink:href="img/sprite.svg#icon-location"></use>
+                            </svg>
+                            <button class="btn-inline">Afganistan, Wakanda</button>
+                        </div>
+
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">9.9</div>
+                            <div class="overview__rating-votes">1234 votes</div>
+                        </div>
+                    </div>
                 </main>
             </div>
         </div>
