created description section

--- a/index.html
+++ b/index.html
@@ -132,6 +132,58 @@
                             <div class="overview__rating-votes">1234 votes</div>
                         </div>
                     </div>
+
+                    <div class="detail">
+                        <div class="description">
+                            <p class="description__paragraph">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus adipisci, fugit iste fuga cumque, harum ut, ullam assumenda nulla omnis libero quia nostrum magnam ipsum! Sit explicabo dolores maiores magni?
+                            </p>
+                            <p class="description__paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolorem, dolore provident error blanditiis natus.
+                            </p>
+                            <ul class="description__list">
+                                <li class="description__list-item">
+                                    Close to the beach
+                                </li>
+                                <li class="description__list-item">
+                                    Airport Shuttle
+                                </li>
+                                <li class="description__list-item">
+                                    Breakfast Included
+                                </li>
+                                <li class="description__list-item">
+                                    Massage Studio
+                                </li>
+                                <li class="description__list-item">
+                                    All Inclusive Bar
+                                </li>
+                                <li class="description__list-item">
+                                    Free Wifi
+                                </li>
+                                <li class="description__list-item">
+                                    Kids Free
+                                </li>
+                                <li class="description__list-item">
+                                    Air Condition
+                                </li>
+                                <div class="recommend">
+                                    <p class="recommend__count">
+                                        Abdu and 5 other friends recommended.
+                                    </p>
+                                    <div class="recommend__friends">
+                                        <img src="img/user-3.jpg" alt="Friend" class="recommed__photo">
+                                        <img src="img/user-4.jpg" alt="Friend" class="recommed__photo">
+                                        <img src="img/user-5.jpg" alt="Friend" class="recommed__photo">
+                                        <img src="img/user-6.jpg" alt="Friend" class="recommed__photo">
+                                    </div>
+                                </div>
+                            </ul>
+                        </div>
+
+                        <div class="user-reviews">
+
+                        </div>
+                    </div>
                 </main>
             </div>
         </div>
