finishing touches on description part

--- a/index.html
+++ b/index.html
@@ -166,18 +166,19 @@
                                 <li class="description__list-item">
                                     Air Condition
                                 </li>
-                                <div class="recommend">
-                                    <p class="recommend__count">
-                                        Abdu and 5 other friends recommended.
-                                    </p>
-                                    <div class="recommend__friends">
-                                        <img src="img/user-3.jpg" alt="Friend" class="recommed__photo">
-                                        <img src="img/user-4.jpg" alt="Friend" class="recommed__photo">
-                                        <img src="img/user-5.jpg" alt="Friend" class="recommed__photo">
-                                        <img src="img/user-6.jpg" alt="Friend" class="recommed__photo">
-                                    </div>
-                                </div>
                             </ul>
+
+                            <div class="recommend">
+                                <p class="recommend__count">
+                                    Abdu and 5 other friends recommended.
+                                </p>
+                                <div class="recommend__friends">
+                                    <img src="img/user-3.jpg" alt="Friend" class="recommend__photo">
+                                    <img src="img/user-4.jpg" alt="Friend" class="recommend__photo">
+                                    <img src="img/user-5.jpg" alt="Friend" class="recommend__photo">
+                                    <img src="img/user-6.jpg" alt="Friend" class="recommend__photo">
+                                </div>
+                            </div>
                         </div>
 
                         <div class="user-reviews">
