made markup for reviews part

--- a/index.html
+++ b/index.html
@@ -182,7 +182,47 @@
                         </div>
 
                         <div class="user-reviews">
+                            <figure class="review">
+                                <blockquote clas="review__text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus similique culpa iusto ducimus quisquam, odio exercitationem! Assumenda, quod.
+                                </blockquote>
+                            
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="User" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">
+                                            Nick Jonas
+                                        </p>
+                                        <p class="review__user-date">
+                                            Dec 25, 2018
+                                        </p>
+                                        <div class="review__rating">
+                                            9.8
+                                        </div>
+                                    </div>
+                                </figcaption>
+                            </figure>
 
+                            <figure class="review">
+                                <blockquote clas="review__text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus similique culpa iusto ducimus quisquam, odio exercitationem! Assumenda, quod.
+                                </blockquote>
+                            
+                                <figcaption class="review__user">
+                                    <img src="img/user-2.jpg" alt="User" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">
+                                            Mary Jane
+                                        </p>
+                                        <p class="review__user-date">
+                                            Dec 25, 2018
+                                        </p>
+                                        <div class="review__rating">
+                                            10.0
+                                        </div>
+                                    </div>
+                                </figcaption>
+                            </figure>
                         </div>
                     </div>
                 </main>
