--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
                         <div class="user-reviews">
                             <figure class="review">
-                                <blockquote clas="review__text">
+                                <blockquote class="review__text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus similique culpa iusto ducimus quisquam, odio exercitationem! Assumenda, quod.
                                 </blockquote>
                             
@@ -196,15 +196,15 @@
                                         <p class="review__user-date">
                                             Dec 25, 2018
                                         </p>
-                                        <div class="review__rating">
-                                            9.8
-                                        </div>
+                                    </div>
+                                    <div class="review__rating">
+                                        9.8
                                     </div>
                                 </figcaption>
                             </figure>
 
                             <figure class="review">
-                                <blockquote clas="review__text">
+                                <blockquote class="review__text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus similique culpa iusto ducimus quisquam, odio exercitationem! Assumenda, quod.
                                 </blockquote>
                             
@@ -217,12 +217,14 @@
                                         <p class="review__user-date">
                                             Dec 25, 2018
                                         </p>
-                                        <div class="review__rating">
-                                            10.0
-                                        </div>
+                                    </div>
+                                    <div class="review__rating">
+                                        10.0
                                     </div>
                                 </figcaption>
                             </figure>
+
+                            <buttom class="btn-inline">Show all <span>&rarr;</span></buttom>
                         </div>
                     </div>
                 </main>
